<?xml version="1.0"?>
<package>
  <name>ssd_detection</name>
  <version>0.0.1</version>
  <description>The caffe_ssd detection used for cameraANDlaser</description>

  <maintainer email="zjuyinhuan@gmail.com">Huan Yin</maintainer>


  <license>ZJU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
